--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,65 @@ body, html {
 #inside-header{
 	top:10%;
 }
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card_container {
+    padding: 2px 16px;
+}
+
+.house-info-p {
+	width: 50%;
+	float: left;
+}
+
+#clear {
+    clear: both;
+}
+
+.mockbid-btn, .mockbid-submit-btn {
+	background: #5d8ffc;
+    color: #fff;
+    border: 1px solid #5d8ffc;
+    border-radius: 5px;
+    padding: 10px;
+    display: block;
+	transition: 0.3s;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
+}
+
+.mockbid-btn:hover, .mockbid-submit-btn:hover {
+	background: #fff;
+	color: #5d8ffc;
+	border: 1px solid #5d8ffc;
+	cursor: pointer;
+}
+
+.mockbid-submit-btn {
+	margin-left: 33%;
+}
+
+.mockbid-input {
+	margin-bottom: 10px;
+}
+
+.center {
+    margin: auto;
+    width: 25%;
+    padding: 10px;
+}
+
+.mockbid-txt {
+	text-align: center;
+}
