--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body, html {
     clear: both;
 }
 
-.mockbid-btn, .mockbid-submit-btn {
+.mockbid-btn, .mockbid-submit-btn, .header-btn {
 	background: #5d8ffc;
     color: #fff;
     border: 1px solid #5d8ffc;
@@ -80,11 +80,22 @@ body, html {
 	-moz-transition: 0.3s;
 }
 
-.mockbid-btn:hover, .mockbid-submit-btn:hover {
+.mockbid-btn:hover, .mockbid-submit-btn:hover, .header-btn:hover {
 	background: #fff;
 	color: #5d8ffc;
 	border: 1px solid #5d8ffc;
 	cursor: pointer;
+}
+
+.header-btn{
+	float: right;
+	margin: 10px;
+}
+
+.header-btn-container {
+	width: 25%;
+    float: right;
+    margin-top: 5%;
 }
 
 .mockbid-submit-btn {
@@ -103,4 +114,60 @@ body, html {
 
 .mockbid-txt {
 	text-align: center;
+}
+
+input, button {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 700;
+}
+
+.main-div {
+  width: 20%;
+  margin: 0px auto;
+  margin-top: 150px;
+  padding: 20px;
+}
+
+.main-div input {
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  padding: 15px;
+  outline: none;
+  width: 88%;
+  margin-bottom: 20px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+}
+
+.bg-large {
+  background: #5d8ffc;
+  color: #fff;
+  border: 1px solid #5d8ffc;
+  border-radius: 5px;
+  padding: 15px;
+  display: block;
+  width: 46%;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  margin-bottom: 10px;
+}
+.bg-large:hover {
+	background: #fff;
+  color: #5d8ffc;
+  border: 1px solid #5d8ffc;
+  cursor: pointer;
+}
+
+.centered {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	font-family: 'Nanum Brush Script', cursive;
+    font-size: 60px;
+	color: #ededed;
 }
