--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,20 @@ input, button {
 .final-score {
   text-align: center;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: bold;s
+}
+
+.view-analytics {
+    
+    background: #37474f;
+    background: #5d8ffc;
+    color: #fff;
+    border: 1px solid #5d8ffc;
+    border-radius: 5px;
+    padding: 10px;
+    display: block;
+    margin-left: 25%;
+ 
 }
 
 #notification-icon {
