--- a/css/main.css
+++ b/css/main.css
@@ -8,24 +8,21 @@ body, html {
 
 .bg {
 	display:table;
-    width:100%;
+  width:100%;
 	height: 100%;
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/welcome.jpg');
-    background-position:center top;
-	background-repeat: no-repeat;
-	background-size: cover;
+  background-color: #1d282c;
 }
 
 
 .header {
 	width:100%;
 	height: 20%;
-	background: #37474f;
+	background: #131a1d;
 }
 
 .centered {
     position: absolute;
-    top: 15%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, -50%);
 	font-family: 'Nanum Brush Script', cursive;
@@ -47,6 +44,8 @@ body, html {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    color: white;
+    height: 200px;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -115,6 +114,7 @@ body, html {
 .mockbid-txt {
 	text-align: center;
   font-weight: bold;
+  margin-top: 20px;
 }
 
 input, button {
@@ -163,16 +163,6 @@ input, button {
   cursor: pointer;
 }
 
-.centered {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-	font-family: 'Nanum Brush Script', cursive;
-    font-size: 60px;
-	color: #ededed;
-}
-
 .more-info {
   float: right;
   margin-top: -33px;
@@ -192,20 +182,22 @@ input, button {
 .final-score {
   text-align: center;
   font-size: 20px;
-  font-weight: bold;s
+  font-weight: bold;
 }
 
 .view-analytics {
     
-    background: #37474f;
     background: #5d8ffc;
     color: #fff;
     border: 1px solid #5d8ffc;
     border-radius: 5px;
     padding: 10px;
     display: block;
-    margin-left: 25%;
- 
+    margin: auto;
+}
+
+.view-analytics:hover {
+  cursor: pointer;
 }
 
 #notification-icon {
@@ -251,3 +243,26 @@ input, button {
     margin-left: 5px;
     margin-top: -1px;
 }
+
+.house-image {
+  position: absolute;
+  z-index: -1;
+  height: 200px;
+  width: 100%;
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
+  background-position: 0px !important;
+  background-size: cover !important;
+}
+
+/*.footer {
+  position: absolute;
+  /*left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:  #37474f;
+  font-family: 'Nunito', sans-serif;
+  text-align: right;
+  color: #ededed;
+}*/
